# dss-support-tools

./: .gitignore  CHANGELOG.md  DSSSupportDesktop.spec  DSSSupportTray.spec  Icue.md  README.md  pyproject.toml
docs/: mining_resource_frequency_mapping.md
installer/: dss-support-tool.iss  install.ps1
scripts/: build-installer.ps1  build.ps1
src/dss_support_tool/: __main__.py  app_qt.py  cli.py  config.py  desktop.py  desktop_controller.py  errors.py  runtime.py  service.py  tray.py
src/dss_support_tool/application/: catalog_service.py  crafting_catalog.py  mining_guidance_data.py  mining_preparation.py  mining_ship_catalog.py  resource_catalog.py  trading_catalog.py  trading_planner.py
src/dss_support_tool/data/: mining-guidance.json
src/dss_support_tool/infrastructure/: snapshot_repository.py
src/dss_support_tool/static/: index.html
tests/: conftest.py  helpers.py  test_catalog_service.py  test_service_api.py  test_snapshot_repository.py
