[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dss-support-tool"
version = "0.2.0"
description = "Desktop and web support tool for Star Citizen DSS workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "PySide6>=6.8,<7.0",
  "trustme>=1.2,<2.0",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.11,<7.0",
]
test = [
  "pytest>=8.3,<9.0",
]

[project.scripts]
dss-support-tool = "dss_support_tool.cli:main"
dss-support-desktop = "dss_support_tool.desktop:main"
dss-support-tray = "dss_support_tool.tray:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
dss_support_tool = ["static/*.html", "static/*.png", "data/*.json"]

[tool.setuptools.packages.find]
where = ["src"]
